added gitignore and changed footTraffic.js to Customers.js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <script src="js/weather.js"></script>
 <script src="js/person.js"></script>
 <script src="js/outputter.js"></script>
-<script src="js/footTraffic.js"></script>
+<script src="js/customers.js"></script>
 <script src="js/lemonade.js"></script>
 <script src="js/hotChocolate.js"></script>
 <script src="js/vendor.js"></script>
