logging customers array and got jasmine testing working

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <script src="js/vendor.js"></script>
 <script src="js/main.js"></script>
 <script>
+var lemonadeStand = new Vendor();
 $(document).ready(function() {
   $.simpleWeather({
     woeid: '2451822', 
